# FoodAI

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: __init__.py  auth.py  categories.py  health.py  menu_items.py  orders.py  recommendations.py  restaurants.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  category.py  menu_item.py  order.py  recommendation.py  restaurant.py  user.py
backend/app/repositories/: base.py  categories.py  menu_items.py  orders.py  recommendations.py  restaurants.py  users.py
backend/app/schemas/: category.py  health.py  menu_item.py  order.py  recommendation.py  restaurant.py  user.py
backend/app/services/: __init__.py  ai.py  auth.py  categories.py  menu_items.py  orders.py  recommendations.py  restaurants.py
backend/tests/: test_health.py
docker/: README.md
docs/: sprint1.md
