[project]
name = "foodai-backend"
version = "0.1.0"
description = "FastAPI backend for FoodAI"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.2",
    "asyncpg==0.29.0",
    "bcrypt==4.1.3",
    "email-validator==2.2.0",
    "fastapi==0.111.0",
    "openai==1.35.10",
    "passlib[bcrypt]==1.7.4",
    "psycopg[binary]==3.2.1",
    "pydantic-settings==2.3.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "sqlalchemy[asyncio]==2.0.31",
    "uvicorn[standard]==0.30.1"
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "ruff==0.5.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
